--- a/modded.toml
+++ b/modded.toml
@@ -12,3 +12,4 @@ enchancement = "mr:6hN1V6wJ"    # Overhauled enchantments and durability
 rei = "mr:nfn13YXA"             # Browse Minecraft recipes
 amendments = "mr:6iTJugQR"      # Tweaking existing Vanilla blocks
 supplementaries = "mr:fFEIiSDQ" # More blocks and items
+suppsquared = "mr:dCCkNFwE"     # More supplementaries
